set it to use gui instead of cli